# wolverine-monitor

./: package-lock.json  package.json  vitest.config.ts
docs/superpowers/plans/: 2026-03-17-wolverine-monitor-plan.md
docs/superpowers/specs/: 2026-03-16-wolverine-monitor-design.md
scripts/: bump-version.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/alerts/: engine.rs
src-tauri/src/commands/: connection_cmds.rs  dashboard_cmds.rs  dead_letter_cmds.rs  envelope_cmds.rs  mod.rs  node_cmds.rs  queue_cmds.rs  trigger_cmds.rs
src-tauri/src/config/: migrations.rs  mod.rs  settings.rs
src-tauri/src/connections/: manager.rs  mod.rs  persistence.rs
src-tauri/src/models/: alert.rs  connection.rs  dashboard.rs  dead_letter.rs  envelope.rs  mod.rs  node.rs  notification.rs  queue.rs
src-tauri/src/monitor/: listener.rs
src-tauri/src/queries/: dashboard.rs  dead_letters.rs  envelopes.rs  mod.rs  nodes.rs  queues.rs
src-tauri/src/triggers/: installer.rs
src/lib/: format.ts  tauri.ts  types.ts
src/lib/components/connections/: ConnectionForm.svelte  ConnectionList.svelte  ConnectionStatus.svelte
src/lib/stores/: connections.ts  dashboard.ts  deadLetters.ts  nodes.ts  queues.ts  router.ts  statusBar.ts  toasts.ts
src/lib/views/: Connections.svelte  Dashboard.svelte  DeadLetters.svelte  Explorer.svelte  Nodes.svelte  Queues.svelte
src/routes/: +page.svelte
src/tests/: format.test.ts  setup.ts
src/tests/stores/: router.test.ts
(+16 files in other folders)
