[package]
name = "wolverine-monitor"
version = "0.1.8"
description = "PostgreSQL monitoring dashboard"
authors = ["you"]
edition = "2021"

[lib]
name = "wolverine_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.14"
postgres-types = { version = "0.2", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
base64 = "0.22"
aes-gcm = "0.10"
sha2 = "0.10"
thiserror = "2"
futures-util = "0.3"

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
